--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^2.0.1",
+    "erc721a": "^4.2.3",
     "hardhat": "^2.12.6"
   },
   "dependencies": {
